code commit@Rahul
validatiuon on employee master form

--- a/src/main/resources/templates/layouts/Master/country.html
+++ b/src/main/resources/templates/layouts/Master/country.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head >
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>EBS</title>
@@ -98,11 +98,11 @@
 
 
 
-													<label class="checkbox-inline">
-														<input type="radio" value="Y" name="inlineRadioOptions">Active
-														<input type="radio" value="N"
-															name="inlineRadioOptions">In-Active
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px" >Active <input
+														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
 													</label>
+													
 												</div><!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
