--- a/src/main/resources/templates/layouts/editview/editState.html
+++ b/src/main/resources/templates/layouts/editview/editState.html
@@ -1,131 +1,181 @@
 <!DOCTYPE html>
-
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<title>Title of Home Page</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-<th:block id="home-static-resources">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
-</th:block>
+
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
+
 
 </head>
-<body>
 
-	<div id="home-header">ERP WhareHouse</div>
-
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
-
-
-
-
-
-	<div id="home-main-content">
-
-		<h3>State Master</h3>
-
-
-		<form th:action="@{/state/}" method="POST" th:object="${state}">
-			<div class="form-border">
-
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+			<section class="content-wrapper">
 				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">State Code</label> <input type="text"
-							class="form-control" placeholder="state code"
-							th:field="*{stateCode}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">State Name</label> <input type="text"
-							class="form-control" placeholder="state name"
-							th:field="*{stateName}">
+					<!-- left column -->
+					<div class="col-md-12">
+						<div class="col-md-3"></div>
+
+
+						<div class="col-md-6" style="margin-top: 20px;">
+
+							<div class="box box-primary">
+
+								<input type="hidden" id="mess" name="mess" th:value="${message}">
+
+								<div class="box-header with-border">
+									<h3 class="box-title">State Master</h3>
+								</div>
+								<!-- form start -->
+								<form id="stateForm" role="form" th:action="@{/state/update/}"
+									method="POST" th:object="${state}">
+									<div class="box-body">
+
+
+										<div class="form-group col-md-6">
+											<label for="inputEmail4">State Code</label> <input
+												type="text" class="form-control" placeholder="State Code"
+												title="state code" th:field="*{stateCode}">
+										</div>
+										<div class="form-group col-md-6">
+											<label for="inputPassword4">State Name</label><span
+												style="color: red">*</span> <input type="text"
+												class="form-control" placeholder="State Name"
+												th:field="*{stateName}" title="This field is required"
+												required>
+										</div>
+
+
+
+										<div class="form-group col-md-12">
+											<label for="inputEmail4">State GST Code</label> <input
+												type="text" class="form-control"
+												placeholder="State Gst Code" title="state gst code"
+												th:field="*{gstStateCode}">
+										</div>
+
+										<div class="form-group col-md-12">
+											<label class="form-label">Country Name</label> <label
+												style="color: red">*</label> <select class="form-control"
+												title="This field is required" required
+												th:field="*{country}">
+												<option value="">Select Country</option>
+												<option th:each="country :  ${countryList}"
+													th:text="${country.countryName}"
+													th:value=" ${country.countryCode}"></option>
+											</select>
+										</div>
+
+
+										<label class="checkbox-inline"> <input type="radio"
+											value="Y" name="active" checked style="margin-left: 5px">Active
+											<input type="radio" value="N" name="active"
+											style="margin-left: 5px">In-Active
+										</label>
+
+									</div>
+
+									<div class="box-footer" style="margin: 10px">
+										<input type="submit" value="Apply Changes"
+											class="btn btn-primary" /> <input type="button"
+											value="Go back!" class="btn btn-danger"
+											onclick="history.back()">
+									</div>
+
+
+
+								</form>
+							</div>
+						</div>
+
+
+						<div class="col-md-3"></div>
 					</div>
 
 				</div>
+			</section>
 
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Gst State Code</label> <input type="text"
-							class="form-control" placeholder="state gst code"
-							th:field="*{gstStateCode}">
-					</div>
-
-					<div class="form-group col-lg-6">
-						<label class="form-label">Country Name</label> <label
-							style="color: red">*</label> <select class="form-control"
-							
-							title="country Name" required th:field="*{country}">
-							<option value="">Select Department</option>
-							<option th:each="country :  ${countryList}"
-								th:text="${country.countryName}"
-								th:value=" ${country.countryCode}"></option>
-						</select>
-					</div>
-
-				</div>
-
-
-
-				<div class="form-group" style="margin: 10px;">
-
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
-							class="form-check-label" for="inlineRadio1"
-							>Active</label>
-					</div>
-
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
-							class="form-check-label" for="inlineRadio1"
-							>In-Active</label>
-					</div>
-
-				</div>
-
-				<div class="row" style="margin: 10px">
-					<input type="submit" value="Submit" class="btn btn-primary" />
-					<input type="reset" value="Reset" class="btn btn-danger" />
-				</div>
-
-			</div>
-		</form>
-
-		<div class="row text-right m-10">
-			<a th:href="@{/state/list}">view state list</a>
 		</div>
 	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+
+	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
+
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
+				});
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
 
 
+	<script>
+		$("#stateForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 
-
-
-
-
-
-
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
-
+	<!--   <section class="content">
+        
+        </section>-->
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
+
 </html>
