--- a/src/main/resources/templates/layouts/editview/editCountry.html
+++ b/src/main/resources/templates/layouts/editview/editCountry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
@@ -60,7 +60,7 @@
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/country/}" method="POST"
+											<form role="form" th:action="@{/country/update/}" method="POST"
 												th:object="${country}">
 												<div class="box-body">
 
@@ -78,23 +78,10 @@
 
 
 
-													<div class="form-group" style="margin:10px;">
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label" for="inlineRadio1"
-																>Active</label>
-														</div>
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label" for="inlineRadio1"
-																>In-Active</label>
-														</div>
-
-													</div>
+												<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px" >Active <input
+														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
+													</label>
 												</div><!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
@@ -123,7 +110,8 @@
 					</section>
 				</section>
 			</div>
-
+</div>
+</div>
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
         
