--- a/src/main/resources/templates/layouts/listview/listofcountry.html
+++ b/src/main/resources/templates/layouts/listview/listofcountry.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -42,43 +49,53 @@
 									<form role="form">
 										<div class="box-body">
 											<div class="table-responsive-sm">
-									<table class="table table-striped" style="width: 80%">
-										<thead>
-											<tr>
-												<th scope="col">#</th>
-												<th scope="col">Country Code</th>
-												<th scope="col">Country Name</th>
-												
-												<th scope="col">Inserted By</th>
-												<th scope="col">Status</th>
-												<th scope="col">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr th:each="country,iter  : ${countryList}">
-												<td th:text="${iter.index}">1</td>
-												<td th:text="${country.countryCode}">Garrett Winters</td>
-												<td th:text="${country.countryName}">Garrett Winters</td>
-												
-												<td th:text="${country.insertedBy}">Good Guys</td>
+												<table class="table table-striped" style="width: 80%">
+													<thead>
+														<tr>
+															<th scope="col">#</th>
+															<th scope="col">Country Code</th>
+															<th scope="col">Country Name</th>
 
-												<td><span class="badge bg-success"
-													th:text="${country.activeYn}">Active</span></td>
+															<th scope="col">Inserted By</th>
+															<th scope="col">Status</th>
+															<th scope="col">Action</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:each="country,iter  : ${countryList}">
+															<td th:text="${iter.index}">1</td>
+															<td th:text="${country.countryCode}">Garrett Winters</td>
+															<td th:text="${country.countryName}">Garrett Winters</td>
 
-												<td><span> <a th:href="@{/country/edit/{id}(id=${country.countryCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span> <a
-														th:href="@{/country/delete/{id}(id=${country.countryCode})}">
-<em class="fa fa-times" style="color: red"> Remove</em></a></span></td>
-											</tr>
+															<td th:text="${country.insertedBy}">Good Guys</td>
+
+															<td><span class="badge bg-success"
+																th:if="${country.active=='Y'}">Active</span></td>
+															<td><span class="badge bg-success"
+																th:if="${country.active=='N'}">In Active</span></td>
+
+															<td><span> <a
+																	th:href="@{/country/edit/{id}(id=${country.countryCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a
+																	th:href="@{/country/delete/{id}(id=${country.countryCode})}">
+																		<em class="fa fa-times" style="color: red">
+																			Remove</em>
+																</a>
+															</span></td>
+														</tr>
 
 
 
 
-										</tbody>
-									</table>
-								</div>										</div>
+													</tbody>
+												</table>
+											</div>
+										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -92,17 +109,20 @@
 					</div>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
-
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
