--- a/src/main/resources/templates/layouts/listview/listofcity.html
+++ b/src/main/resources/templates/layouts/listview/listofcity.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -65,19 +72,21 @@
 															<td th:text="${city.cityType}">Garrett Winters</td>
 															<td th:text="${city.district}">Garrett Winters</td>
 															<td th:text="${city.regionCode}">Garrett Winters</td>
-															<td th:text="${city.state.stateName}">Garrett Winters</td>
+															<td th:text="${city.state.stateName}">Garrett
+																Winters</td>
 															<td th:text="${city.insertedBy}">Good Guys</td>
 
-															<td><span class="badge bg-success"
-																	th:text="${city.activeYn}">Active</span></td>
+															<td th:if="${city.active=='Y'}"><span class="badge bg-success">Active</span></td>
+															<td th:if="${city.active=='N'}"><span class="badge bg-success">In Active</span></td>
 
 															<td><span> <a
-																		th:href="@{/city/edit/{id}(id=${city.cityCode})}"><em
-																			class="fa fa-edit" style="color: blue;">
-																			Edit</em></a></span> <span> <a
-																		th:href="@{/city/delete/{id}(id=${city.cityCode})}">
+																	th:href="@{/city/edit/{id}(id=${city.cityCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a th:href="@{/city/delete/{id}(id=${city.cityCode})}">
 																		<em class="fa fa-times" style="color: red">
-																			Remove</em></a></span></td>
+																			Remove</em>
+																</a>
+															</span></td>
 														</tr>
 
 
@@ -89,7 +98,8 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -103,16 +113,20 @@
 					</div>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
