--- a/src/main/resources/templates/layouts/listview/listofdesignation.html
+++ b/src/main/resources/templates/layouts/listview/listofdesignation.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -49,10 +56,8 @@
 															<th scope="col">Designation Code</th>
 															<th scope="col">Designation Name</th>
 															<th scope="col">Pay Scale Code</th>
-															<th scope="col">Basic Slab-1</th>
-															<th scope="col">Basic Slab-2</th>
-															<th scope="col">increment-1</th>
-															<th scope="col">increment-2</th>
+
+															<th scope="col">Status</th>
 
 															<th scope="col">Action</th>
 
@@ -64,18 +69,22 @@
 															<td th:text="${desig.desigCode}">Garrett Winters</td>
 															<td th:text="${desig.desigName}">Garrett Winters</td>
 															<td th:text="${desig.payScaleCode}">Garrett Winters</td>
-															<td th:text="${desig.basicSlab1}">Garrett Winters</td>
-															<td th:text="${desig.basicSlab2}">Garrett Winters</td>
-															<td th:text="${desig.increment1}">Garrett Winters</td>
-															<td th:text="${desig.increment2}">Good Guys</td>
 
+
+															<td th:if="${desig.active=='Y' }"><span
+																class="badge bg-success">Active</span></td>
+
+															<td th:if="${desig.active=='N' }"><span
+																class="badge bg-success">In Active</span></td>
 
 
 															<td><span> <a
-																		th:href="@{/designation/edit/{id}(id=${desig.desigCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
-																<span> <a
-																		th:href="@{/designation/delete/{id}(id=${desig.desigCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
-															</td>
+																	th:href="@{/designation/edit/{id}(id=${desig.desigCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<!-- <a
+																	th:href="@{/designation/delete/{id}(id=${desig.desigCode})}"><em
+																		class="fa fa-times" style="color: red"> Remove</em></a>
+															</span></td> -->
 														</tr>
 
 
@@ -87,7 +96,8 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -101,16 +111,20 @@
 					</div>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
